# hpp-wholebody-step-planner

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README.md  aclocal.m4  configure.ac  deps.ac
doc/: Doxyfile.extra.in
doc/additionalDoc/: doc.hh
include/: Makefile.am
include/hpp/wholebody-step-planner/: config-motion-constraint.hh  config-shooter-reaching.hh  direct-path-validator.hh  distance.hh  fwd.hh  kwsPlusBenchRdmBuilder.h  parallel-motion-constraint.hh  path-optimizer.hh  plane-motion-constraint.hh  planner.hh  position-motion-constraint.hh  rotation-motion-constraint.hh  shooter-humanoid.hh  wholebody-constraint.hh
script/: tools.py  wholebody-step.py
src/: CMakeLists.txt  Makefile.am  config-motion-constraint.cc  config-shooter-reaching.cc  config-shooter-reaching.hh  direct-path-validator.cc  distance.cc  hpp-wholebody-step-planner.cc  parallel-motion-constraint.cc  path-optimizer.cc  plane-motion-constraint.cc  planner.cc  position-motion-constraint.cc  rotation-motion-constraint.cc  shooter-humanoid.cc  wholebody-constraint.cc
src/roboptim/: path-optimizer.cc  path-optimizer.hh
tests/: Makefile.am  atlocal.in  common.hh  package.m4.in  simple-test.at  simple-test.cc  testsuite.at
unitTesting/: Makefile.am  benchmark.cc  load-hrp2.cc  main.cc  path-parser.cc  planner-test.cc  planner-test.hh
