include $(top_srcdir)/build-aux/init.mk

# -- Distribute and install headers
nobase_include_HEADERS =				\
		hpp/wholebody-step-planner/planner.hh \
		hpp/wholebody-step-planner/config-motion-constraint.hh \
		hpp/wholebody-step-planner/wholebody-constraint.hh \
		hpp/wholebody-step-planner/path-optimizer.hh \
		hpp/wholebody-step-planner/distance.hh
